{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 462,
  "lineage": "9dfb92b0-0a32-5373-5e0f-96993488d845",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090d9f653998f3d2d",
            "arn": "arn:aws:ec2:us-east-1:224472962009:elastic-ip/eipalloc-090d9f653998f3d2d",
            "domain": "vpc",
            "id": "eipalloc-090d9f653998f3d2d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-227-200-188.compute-1.amazonaws.com",
            "public_ip": "3.227.200.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-dev"
            },
            "tags_all": {
              "Name": "nat-dev"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224472962009:internet-gateway/igw-08f1994e8741b4e72",
            "id": "igw-08f1994e8741b4e72",
            "owner_id": "224472962009",
            "tags": {
              "Name": "igw-dev"
            },
            "tags_all": {
              "Name": "igw-dev"
            },
            "vpc_id": "vpc-07a12b532c2f77370"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090d9f653998f3d2d",
            "association_id": "eipassoc-07f8e22eec1fbd792",
            "connectivity_type": "public",
            "id": "nat-08019eb9a9eab21a6",
            "network_interface_id": "eni-07456ca3238215abe",
            "private_ip": "10.0.67.229",
            "public_ip": "3.227.200.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-078a73a1655c041d2",
            "tags": {
              "Name": "nat-dev"
            },
            "tags_all": {
              "Name": "nat-dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224472962009:route-table/rtb-039998447c2c04a66",
            "id": "rtb-039998447c2c04a66",
            "owner_id": "224472962009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08019eb9a9eab21a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-dev"
            },
            "tags_all": {
              "Name": "rt-private-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a12b532c2f77370"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_zone_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224472962009:route-table/rtb-02709cacf8d250c81",
            "id": "rtb-02709cacf8d250c81",
            "owner_id": "224472962009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f1994e8741b4e72",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-dev"
            },
            "tags_all": {
              "Name": "rt-public-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a12b532c2f77370"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fc5f14ed8a502bb",
            "route_table_id": "rtb-039998447c2c04a66",
            "subnet_id": "subnet-0f492135f85be5c2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private_zone_1",
            "aws_subnet.public_zone_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e51595de7c37f42e",
            "route_table_id": "rtb-039998447c2c04a66",
            "subnet_id": "subnet-05a8e55373bddcfa4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private_zone_2",
            "aws_subnet.public_zone_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0223f5f12f90ea0cc",
            "route_table_id": "rtb-02709cacf8d250c81",
            "subnet_id": "subnet-078a73a1655c041d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0e388af868d0259",
            "route_table_id": "rtb-02709cacf8d250c81",
            "subnet_id": "subnet-06cb5f88cccebd04a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224472962009:security-group/sg-0616ef10b70cd9e5f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0616ef10b70cd9e5f",
            "ingress": [],
            "name": "vpc-link",
            "name_prefix": "",
            "owner_id": "224472962009",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a12b532c2f77370"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224472962009:subnet/subnet-0f492135f85be5c2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f492135f85be5c2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224472962009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1a-dev",
              "kubernetes.io/cluster/eks-soat-fast-food-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1a-dev",
              "kubernetes.io/cluster/eks-soat-fast-food-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07a12b532c2f77370"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224472962009:subnet/subnet-05a8e55373bddcfa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a8e55373bddcfa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224472962009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1b-dev",
              "kubernetes.io/cluster/eks-soat-fast-food-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1b-dev",
              "kubernetes.io/cluster/eks-soat-fast-food-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07a12b532c2f77370"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224472962009:subnet/subnet-078a73a1655c041d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078a73a1655c041d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "224472962009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-east-1a-dev",
              "kubernetes.io/cluster/eks-soat-fast-food-dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-1a-dev",
              "kubernetes.io/cluster/eks-soat-fast-food-dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07a12b532c2f77370"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224472962009:subnet/subnet-06cb5f88cccebd04a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cb5f88cccebd04a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "224472962009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-east-1b-dev",
              "kubernetes.io/cluster/eks-soat-fast-food-dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-1b-dev",
              "kubernetes.io/cluster/eks-soat-fast-food-dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07a12b532c2f77370"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224472962009:vpc/vpc-07a12b532c2f77370",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09745ee9983a428cf",
            "default_route_table_id": "rtb-0251bf9c7b142309b",
            "default_security_group_id": "sg-0da6489c454dd5c6f",
            "dhcp_options_id": "dopt-42160920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a12b532c2f77370",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0251bf9c7b142309b",
            "owner_id": "224472962009",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}